--- a/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_edittoolbar.xml
+++ b/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_edittoolbar.xml
@@ -36,6 +36,18 @@
         tools:ignore="ContentDescription"
         android:layout_marginTop="8dp" />
 
+    <ImageView
+        android:id="@+id/mozac_browser_toolbar_summary_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:scaleType="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/mozac_browser_toolbar_edit_actions_end"
+        app:srcCompat="@drawable/mozac_ic_search"
+        android:visibility="visible"
+        tools:ignore="ContentDescription"
+        android:layout_marginTop="8dp" />
+
     <mozilla.components.browser.toolbar.internal.ActionContainer
         android:id="@+id/mozac_browser_toolbar_edit_actions_start"
         android:layout_width="wrap_content"
